@@ -1,3 +1,12 @@
+Sun Feb  3 18:37:21 2008  Minero Aoki  <aamine@loveruby.net>
+
+	* build.xml: unify task: jar and compile.
+
+Sun Feb  3 18:36:52 2008  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/parser/Parser.jj: refactoring: extract
+	  method: new method addKnownTypedefs.
+
 Sun Feb  3 18:30:18 2008  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/compiler/Compiler.java (dumpTokenList):
